利用七牛云，为详情页的图片尺寸限制为290px X 290px

--- a/nowstagram/templates/profile.html
+++ b/nowstagram/templates/profile.html
@@ -50,7 +50,7 @@
                 {% for image in images: %}
                 <a class="item" href="/image/{{image.id}}">
                     <div class="img-box">
-                        <img src="{{ image.url }}">
+                        <img src="{{ image.url }}?imageView2/1/w/290/h/290">
                     </div>
                     <!-- <span class="ico-video">视频</span> -->
                     <div class="img-mask"></div>
